--- a/style-login.css
+++ b/style-login.css
@@ -28,19 +28,18 @@ body * {
 }
 
 .left-login>h1 {
-    font-size: 3vw;
+    font-size: 2vw;
     color: #fff;
 }
 
 .left-login-image {
-    width: 35vw;
+    width: 25vw;
 }
 
 .right-login {
     width: 50vw;
     height: 100vh;
     display: flex;
-    justify-content: center;
     align-items: center;
 }
 
@@ -72,7 +71,7 @@ body * {
 }
 
 .textfield>input {
-    width: 100%;
+    width: 50%;
     border: none;
     border-radius: 10px;
     padding: 15px;
@@ -109,28 +108,48 @@ body * {
     box-shadow: 0px 10px 40px #192121;
 }
 
-@media screen and (max-widht: 950px) {
-    .card-login {
-        width: 85%;
-    }
+.cadastro {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-@media screen and (max-widht: 600px) {
-    .main-login {
-        flex-direction: column;
-    }
+.card-cadastro {
+    width: 60%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 30px 35px;
+    background: #233b3b;
+    border-radius: 20px;
+    box-shadow: 0px 10px 40px #141f1f;
+}
 
-    .left-login>h1 {
-        display: none;
-    }
+.card-cadastro>h1 {
+    color: #fff;
+    font-weight: 800;
+    margin: 0;
+}
 
-    .left-login {
-        width: 100%;
-        height: auto;
-    }
+.btn-cadastro {
+    width: 100%;
+    padding: 16px 0px;
+    margin: 25px;
+    border: none;
+    border-radius: 8px;
+    outline: none;
+    text-transform: uppercase;
+    font-weight: 800;
+    letter-spacing: 2px;
+    color: #003434;
+    background: #fff;
+    cursor: pointer;
+    box-shadow: 0px 10px 40px #192121;
+}
 
-    .right-login {
-        width: 100%;
-        height: auto;
-    }
+.fieldset {
+    display: flex;
 }
