--- a/marketplace-pet/css/style-cadastro.css
+++ b/marketplace-pet/css/style-cadastro.css
@@ -9,7 +9,7 @@ body * {
     box-sizing: border-box;
 }
 
-.main-login {
+.main-cadastro {
     width: 100vw;
     height: 100vh;
     background: #2F4F4F;
