--- a/marketplace-pet/css/style-especifica.css
+++ b/marketplace-pet/css/style-especifica.css
@@ -50,6 +50,8 @@ header {
 
 .nav {
     display: flex;
+    justify-content: space-between;
+    padding: 1.5rem 6rem;
 }
 
 .nav a {
@@ -88,7 +90,7 @@ header {
     color: var(--main-color);
 }
 
-.home{
+.home {
     position: relative;
     height: 100vh;
     width: 85%;
@@ -98,34 +100,34 @@ header {
     gap: 2rem;
 }
 
-.home-text h1{
+.home-text h1 {
     font-size: 40px;
     line-height: 1.2;
     margin-bottom: 2px;
 }
 
-.home-text h5{
+.home-text h5 {
     color: #ffffff99;
     font-size: 14px;
     font-weight: 400;
     margin-bottom: 60px;
 }
 
-.home-text h3{
+.home-text h3 {
     font-size: 40px;
     font-weight: 700;
     letter-spacing: 2px;
     margin-bottom: 5px;
 }
 
-.home-img img{
+.home-img img {
     max-width: 100%;
     width: 28rm;
     height: auto;
     margin-left: 25%;
 }
 
-.btn{
+.btn {
     display: inline-block;
     padding: 15px 70px;
     font-size: 16px;
@@ -136,13 +138,13 @@ header {
     color: #fff;
 }
 
-.btn:hover{
+.btn:hover {
     background: var(--text-color);
     border: 2px solid var(--text-color);
     color: #000;
 }
 
-.main{
+.main {
     position: absolute;
     top: 50%;
     left: 3%;
@@ -154,13 +156,13 @@ header {
     gap: 2rem;
 }
 
-.main li img{
+.main li img {
     width: 75px;
     height: auto;
     max-width: 100%;
 }
 
-.row1{
+.row1 {
     background: #489b7f;
     height: 70px;
     width: 70px;
@@ -171,11 +173,11 @@ header {
     display: inline-flex;
 }
 
-.row1:hover{
+.row1:hover {
     transform: translateY(-8px);
 }
 
-.row2{
+.row2 {
     background: #348d52;
     height: 70px;
     width: 70px;
@@ -186,11 +188,11 @@ header {
     display: inline-flex;
 }
 
-.row2:hover{
+.row2:hover {
     transform: translateY(-8px);
 }
 
-.row3{
+.row3 {
     background: #336d21;
     height: 70px;
     width: 70px;
@@ -201,6 +203,6 @@ header {
     display: inline-flex;
 }
 
-.row3:hover{
+.row3:hover {
     transform: translateY(-8px);
 }
